various version updates, dockerfile updated for jumblr fix, catch all jumblr errors